--- a/src/Churchee.Module.UI/Components/FormFields.razor
+++ b/src/Churchee.Module.UI/Components/FormFields.razor
@@ -47,7 +47,14 @@
                     <RadzenFileInput TValue="string" class="w-100" @bind-Value=@upload.Value @bind-FileName=@upload.FileName @bind-FileSize=@upload.Size Change=@(args => OnFileChange(args, upload)) Error=@(args => OnFileError(args, "FileInput")) InputAttributes="@(new Dictionary<string,object>(){ { "aria-label", "select file" }})" />
                 }
 
-                if (dataType != DataTypes.Hidden && dataType != DataTypes.TextWithSlug && dataType != DataTypes.Upload)
+                if (dataType == DataTypes.ImageUpload)
+                {
+                    var upload = (Upload)prop.GetValue(InputModel);
+
+                    <RadzenFileInput TValue="string" class="w-100" @bind-Value=@upload.Value @bind-FileName=@upload.FileName @bind-FileSize=@upload.Size Change=@(args => OnFileChange(args, upload)) Error=@(args => OnFileError(args, "FileInput")) InputAttributes="@(new Dictionary<string,object>(){ { "aria-label", "select image" }})" />
+                }
+
+                if (dataType != DataTypes.Hidden && dataType != DataTypes.TextWithSlug && dataType != DataTypes.Upload && dataType != DataTypes.ImageUpload)
                 {
                     <RadzenFormField Text=@prop.Name.ToSentence()>
                         <ChildContent>
@@ -59,6 +66,17 @@
                                 if (dataType == typeof(string).Name || dataType == DataTypes.Text)
                                 {
                                     <RadzenTextBox Value="@prop.GetValue(InputModel).ToString()" Change=@((value) => OnFieldChange(prop, value)) />
+                                }
+
+
+                                if (dataType == DataTypes.DateTime)
+                                {
+                                    <RadzenDatePicker DateFormat="dd-MM-yyyy" TValue="DateTime" Value=@prop.GetValue(InputModel) Change=@((value) => OnFieldChange(prop, value)) />
+                                }
+
+                                if (dataType == DataTypes.Date)
+                                {
+                                    <RadzenDatePicker DateFormat="dd-MM-yyyy" ShowTime=false TValue="DateTime" Value=@prop.GetValue(InputModel) Change=@((value) => OnFieldChange(prop, value)) Style="max-width:300px;" />
                                 }
 
                                 if (dataType == DataTypes.Url)
@@ -94,6 +112,11 @@
                                     <RazorEditor Value="@prop.GetValue(InputModel).ToString()" Change=@((value) => OnFieldChange(prop, value))></RazorEditor>
                                 }
 
+                                if (dataType == DataTypes.GeoCoordinates)
+                                {
+                                    <RadzenNumeric TValue="decimal?" Format="#.0000" Value="@(GetParsed<Decimal>(prop, InputModel))" Change=@((value) => OnFieldChange(prop, value))></RadzenNumeric>
+                                }
+
                                 if (dataType == DataTypes.Html)
                                 {
 
@@ -127,7 +150,7 @@
                         <Helper>
                             @if (dataType != DataTypes.Hidden)
                             {
-                                <ValidationMessage For="GetExpression(prop, InputModel)" />
+                                 <ValidationMessage For="GetExpression(prop, InputModel)" />
                             }
 
                         </Helper>
@@ -175,7 +198,7 @@
 
     public async Task OnFieldChange(PropertyInfo info, object value)
     {
-        
+
         info.SetValue(InputModel, value);
 
         // Get the FieldIdentifier with the EditContext from the field name
@@ -213,6 +236,18 @@
         _logger.LogInformation($"{upload} value changed");
     }
 
+    Nullable<T> GetParsed<T>(PropertyInfo info, object inputModel) where T: struct
+    {
+        var value = info.GetValue(inputModel);
+
+        if(value != null)
+        {
+            return (T)value;
+        }
+
+        return null;
+    }
+
     void OnFileError(UploadErrorEventArgs args, string name)
     {
         if (args.Message.Contains("File too large"))
@@ -232,7 +267,8 @@
         // Create an expression to set the ValueExpression-attribute.
         var constant = System.Linq.Expressions.Expression.Constant(inputModel, inputModel.GetType());
         var exp = System.Linq.Expressions.MemberExpression.Property(constant, info.Name);
-        var lamb = System.Linq.Expressions.Expression.Lambda<Func<object>>(exp);
+        var conversion = Expression.Convert(exp, typeof(object));
+        var lamb = System.Linq.Expressions.Expression.Lambda<Func<object>>(conversion);
 
         return lamb;
     }
