--- a/src/Churchee.Module.Site/Areas/Site/Pages/PageTypes/Index.razor
+++ b/src/Churchee.Module.Site/Areas/Site/Pages/PageTypes/Index.razor
@@ -16,13 +16,13 @@
     </div> 
 </SectionContent>
 
-<Grid TItem="GetPageTypesListingResponse" IsLoading=isLoading Data=employees LoadData="@LoadData" ShowEdit="true"></Grid>
+<Grid TItem="GetPageTypesListingResponse" IsLoading=isLoading Data=listingData LoadData="@LoadData" ShowEdit="true"></Grid>
 
 @code {
 
     int count;
 
-    IEnumerable<GetPageTypesListingResponse> employees;
+    IEnumerable<GetPageTypesListingResponse> listingData;
 
     bool isLoading = false;
 
@@ -53,7 +53,7 @@
         count = result.RecordsTotal;
 
         // Perform paging via Skip and Take.
-        employees = result.Data;
+        listingData = result.Data;
 
         isLoading = false;
     }
