--- a/src/Churchee.Module.Site/Areas/Site/Pages/Templates/Index.razor
+++ b/src/Churchee.Module.Site/Areas/Site/Pages/Templates/Index.razor
@@ -15,13 +15,13 @@
 
 <PageName></PageName>
 
-<Grid TItem="TemplateListingResponse" IsLoading=isLoading Data=employees LoadData="@LoadData" ShowEdit="true"></Grid>
+<Grid TItem="TemplateListingResponse" IsLoading=isLoading Data=listingData LoadData="@LoadData" ShowEdit="true"></Grid>
 
 @code {
 
     int count;
 
-    IEnumerable<TemplateListingResponse> employees;
+    IEnumerable<TemplateListingResponse> listingData;
 
     bool isLoading = false;
 
@@ -52,7 +52,7 @@
         count = result.RecordsTotal;
 
         // Perform paging via Skip and Take.
-        employees = result.Data;
+        listingData = result.Data;
 
         isLoading = false;
     }
