--- a/src/Churchee.Module.Events/Areas/Website/Pages/Events/Index.razor
+++ b/src/Churchee.Module.Events/Areas/Website/Pages/Events/Index.razor
@@ -1,4 +1,5 @@
-﻿@using Churchee.Module.Events.Features.Queries
+﻿@using Churchee.Module.Events.Features.Commands
+@using Churchee.Module.Events.Features.Queries
 @using Churchee.Module.Site.Features.CDN.Queries
 @using Churchee.Module.UI.Components
 @using Microsoft.AspNetCore.Components.Forms
@@ -19,27 +20,46 @@
 </SectionContent>
 
 
-<Grid TItem="GetListingQueryResponseItem" IsLoading=isLoading Data=employees LoadData="@LoadData" ShowEdit="true" ImagePrefix="@(imagePrefix)"></Grid>
+<Grid @ref="dataGrid" TItem="GetListingQueryResponseItem" IsLoading=isLoading Data=listingData LoadData="@LoadData" ShowEdit="true" ImagePrefix="@(imagePrefix)" OnDelete="OnDelete"></Grid>
 
 @code {
 
     string imagePrefix = "";
 
+    Grid<GetListingQueryResponseItem> dataGrid;
+
     [Inject]
-    private IMediator Mediator { get; set; } = default!;
+    private NotificationService _notificationService { get; set; } = default!;
+
+    [Inject]
+    private IMediator _mediator { get; set; } = default!;
 
     protected override async Task OnInitializedAsync()
     {
         await base.OnInitializedAsync();
 
-        imagePrefix = await Mediator.Send(new GetCDNPathQuery());
+        imagePrefix = await _mediator.Send(new GetCDNPathQuery());
     }
 
     int count;
 
-    IEnumerable<GetListingQueryResponseItem> employees;
+    IEnumerable<GetListingQueryResponseItem> listingData;
 
     bool isLoading = false;
+
+    async Task OnDelete(GetListingQueryResponseItem item)
+    {
+        var result = await _mediator.Send(new DeleteEventCommand(item.Id));
+
+        if (!result.IsSuccess)
+        {
+            _notificationService.Notify(NotificationSeverity.Error, "Error: Could not remove Event");
+
+            return;
+        }
+
+        _notificationService.Notify(NotificationSeverity.Success, "Event Deleted");
+    }
 
     async Task LoadData(LoadDataArgs args)
     {
@@ -56,7 +76,7 @@
 
         }
 
-    var result = await Mediator.Send(new GetListingQuery(
+    var result = await _mediator.Send(new GetListingQuery(
         skip: args.Skip.Value,
         take: args.Top.Value,
         searchText: args.Filter,
@@ -68,7 +88,7 @@
     count = result.RecordsTotal;
 
     // Perform paging via Skip and Take.
-    employees = result.Data;
+    listingData = result.Data;
 
     isLoading = false;
     }
