--- a/src/Churchee.Module.Events/Components/EventDatesManager.razor
+++ b/src/Churchee.Module.Events/Components/EventDatesManager.razor
@@ -1,4 +1,5 @@
-﻿@using Churchee.Module.UI.Models
+﻿@using Churchee.Module.Events.Models
+@using Churchee.Module.UI.Models
 @using Microsoft.AspNetCore.Components.Routing
 @using Radzen
 @using Radzen.Blazor
@@ -11,16 +12,16 @@
     <RadzenStack Orientation="Orientation.Horizontal">
 
         <div>
-            @if(item.start != null)
+            @if(item.Start != null)
             {
-                <div>@item.start.Value.ToString("dd/MM/yyyy HH:mm")</div>
+                <div>@item.Start.Value.ToString("dd/MM/yyyy HH:mm")</div>
             }
         </div>
         <div>
 
-            @if (item.end != null)
+            @if (item.End != null)
             {
-                <div>@item.end.Value.ToString("dd/MM/yyyy HH:mm")</div>
+                <div>@item.End.Value.ToString("dd/MM/yyyy HH:mm")</div>
             }
         </div>
 
@@ -45,7 +46,7 @@
 @code {
 
     [Parameter] 
-    public List<(DateTime? start, DateTime? end)> Dates { get; set; }
+    public List<EventDateModel> Dates { get; set; }
 
     public DateTime? Start { get; set; }
     public DateTime? End { get; set; }
@@ -57,7 +58,7 @@
 
     public async Task AddEntry()
     {
-        Dates.Add((Start, End));
+        Dates.Add(new EventDateModel(Start, End));
 
         Start = null;
         End = null;
@@ -65,9 +66,9 @@
         StateHasChanged();
     }
 
-    public async Task RemoveEntry((DateTime? start, DateTime? end) entry)
+    public async Task RemoveEntry(EventDateModel item)
     {
-        Dates.Remove(entry);
+        Dates.Remove(item);
 
         StateHasChanged();
     }
