--- a/src/Churchee.Module.Site/Areas/Site/Pages/Feed/Index.razor
+++ b/src/Churchee.Module.Site/Areas/Site/Pages/Feed/Index.razor
@@ -17,8 +17,6 @@
 
 @code {
 
-    int count;
-
     IEnumerable<GetListBlogItemsResponseItem> listingData;
 
     bool isLoading = false;
@@ -27,29 +25,12 @@
     {
         isLoading = true;
 
-        string orderBy = "Title";
-        string orderByDirection = "asc";
-
-        if (!string.IsNullOrEmpty(args.OrderBy))
-        {
-            var split = args.OrderBy.Split(" ");
-            orderBy = split[0];
-            orderByDirection = split[1];
-
-        }
-
         var result = await Mediator.Send(new GetListBlogItemsRequest(
             skip: args.Skip.Value,
             take: args.Top.Value,
             searchText: args.Filter,
-            orderBy: orderBy,
-            orderByDirection: orderByDirection,
-            draw: args.Top.Value), default);
+            orderBy: string.IsNullOrEmpty(args?.OrderBy) ? "Title desc" : args?.OrderBy), default);
 
-        // Important!!! Make sure the Count property of RadzenDataGrid is set.
-        count = result.RecordsTotal;
-
-        // Perform paging via Skip and Take.
         listingData = result.Data;
 
         isLoading = false;
