--- a/src/Churchee.Module.Site/Areas/Site/Pages/Templates/Index.razor
+++ b/src/Churchee.Module.Site/Areas/Site/Pages/Templates/Index.razor
@@ -19,8 +19,6 @@
 
 @code {
 
-    int count;
-
     IEnumerable<TemplateListingResponse> listingData;
 
     bool isLoading = false;
@@ -29,29 +27,12 @@
     {
         isLoading = true;
 
-        string orderBy = "Location";
-        string orderByDirection = "asc";
-
-        if (!string.IsNullOrEmpty(args.OrderBy))
-        {
-            var split = args.OrderBy.Split(" ");
-            orderBy = split[0];
-            orderByDirection = split[1];
-
-        }
-
         var result = await Mediator.Send(new GetTemplatesListingQuery(
-            skip: args.Skip.Value,
-            take: args.Top.Value,
-            searchText: args.Filter,
-            orderBy: orderBy,
-            orderByDirection: orderByDirection,
-            draw: args.Top.Value), default);
+                skip: args?.Skip ?? 0,
+                take: args?.Top ?? 20,
+                searchText: args?.Filter ?? string.Empty,
+                orderBy: string.IsNullOrEmpty(args?.OrderBy) ? "Location asc" : args?.OrderBy), default);
 
-        // Important!!! Make sure the Count property of RadzenDataGrid is set.
-        count = result.RecordsTotal;
-
-        // Perform paging via Skip and Take.
         listingData = result.Data;
 
         isLoading = false;
