--- a/src/Churchee.Module.Podcasts.Spotify/Areas/Integrations/Pages/Spotify.razor
+++ b/src/Churchee.Module.Podcasts.Spotify/Areas/Integrations/Pages/Spotify.razor
@@ -4,18 +4,18 @@
 @using Microsoft.Extensions.Logging
 @using Microsoft.AspNetCore.Components.Sections
 @using MediatR
-@using Churchee.Module.Podcasts.AnchorIntegration.Areas.Integrations.Models
-@using Churchee.Module.Podcasts.Anchor.Features.Podcasts.Commands
-@using Churchee.Module.Podcasts.Anchor.Features.Podcasts.Queries
+@using Churchee.Module.Podcasts.SpotifyIntegration.Areas.Integrations.Models
+@using Churchee.Module.Podcasts.Spotify.Features.Podcasts.Commands
+@using Churchee.Module.Podcasts.Spotify.Features.Podcasts.Queries
 @using Churchee.Module.UI.Components
 @using Radzen.Blazor
 @using Radzen
-@page "/management/integrations/anchor"
-@inject ILogger<Anchor> Logger
+@page "/management/integrations/spotify"
+@inject ILogger<Spotify> Logger
 @inject IMediator Mediator
 
 
-@if (anchorConfigued)
+@if (spotifyConfigued)
 {
     <div>
 
@@ -55,7 +55,7 @@ else
     [Inject]
     private NotificationService _notificationService { get; set; }
 
-    bool anchorConfigued = false;
+    bool spotifyConfigued = false;
 
     DateTime? lastRun = null;
 
@@ -63,20 +63,20 @@ else
     {
         var result = await Mediator.Send(new GetPodcastSettingsRequest());
 
-        InputModel = new InputModel(result.AnchorUrl, result.NameForContent);
+        InputModel = new InputModel(result.SpotifyUrl, result.NameForContent);
 
         lastRun = result.LastRun;
 
-        anchorConfigued = !string.IsNullOrEmpty(result.AnchorUrl);
+        spotifyConfigued = !string.IsNullOrEmpty(result.SpotifyUrl);
     }
 
     private async Task DisableSync()
     {
-        var result = await Mediator.Send(new DisableAnchorPodcastSyncCommand());
+        var result = await Mediator.Send(new DisableSpotifyPodcastSyncCommand());
 
         if (result.IsSuccess)
         {
-            anchorConfigued = false;
+            spotifyConfigued = false;
 
             _notificationService.Notify(NotificationSeverity.Success, "Integration Disabled");
 
@@ -88,7 +88,7 @@ else
 
     private async Task SyncNow()
     {
-        var result = await Mediator.Send(new EnableAnchorPodcastSyncCommand(InputModel?.AnchorRSSFeedUrl));
+        var result = await Mediator.Send(new EnableSpotifyPodcastSyncCommand(InputModel?.SpotifyRSSFeedUrl));
 
         if (result.IsSuccess)
         {
@@ -108,15 +108,15 @@ else
             _notificationService.Notify(NotificationSeverity.Error, "Failed to enable Podcasts");
         }
 
-        var result2 = await Mediator.Send(new EnableAnchorPodcastSyncCommand(InputModel?.AnchorRSSFeedUrl));
+        var result2 = await Mediator.Send(new EnableSpotifyPodcastSyncCommand(InputModel?.SpotifyRSSFeedUrl));
 
         if (result.IsSuccess)
         {
-            Logger.LogDebug("anchorrssfeedurl = {anchorrssfeedurl}", InputModel.AnchorRSSFeedUrl);
+            Logger.LogDebug("spotifyrssfeedurl = {spotifyrssfeedurl}", InputModel.SpotifyRSSFeedUrl);
 
             _notificationService.Notify(NotificationSeverity.Success, "Spotify Podcasts configured, Syncing will being shortly");
 
-            anchorConfigued = true;
+            spotifyConfigued = true;
 
             StateHasChanged();
 
